# WhatToWipe

./: .gitignore  README.md  Shitwiper.code-workspace
.cursor/rules/: agent-change-discipline.mdc  brevity.mdc  build-output-metadata.mdc  git-branching.mdc  never-master.mdc  requirements-obedience.mdc  xmstp-docs.mdc
.githooks/: README.md  post-commit
.github/workflows/: append-dispute-review.yml  append-fixplan-review-on-issue.yml  append-fixplan-review.yml  append-fixplan-second-review.yml  append-fixplan-unreadable-size.yml  win-cpp-qt-phase1.yml  windows-build-pipeline.yml
assets/icons/: FS-TOOLBAR-MAP.txt
docs/: CONTRIBUTORS.md  build-workflow.md  folder-structure.md
docs/guides/win/: choosing-a-lib-for-a-grid.md  win-go-editable-property-grids.md
docs/history/: builds.txt  releases.txt
docs/specs/: arch-for-true-grid-win-go.md  arch-win-cpp-qt.md  arch-win-go.md  dispute.md  fixplan.md  funcspec.md  impl-win-cpp-qt.md  legalspec.md  techspec-win-cpp-qt.md  techspec-win-go.md  true-grid-code-bundle.md  true-grid-related-sources.md
docs/verification/: README.md  fixplan.md  io-01-scan-boundary.md  io-03-reparse-policy.md  licensing-decision-record.md  settings-grid-qt-strategy.md
installer/: EULA.txt  Erase & Rewrite.iss  INSTALL-LICENSE.txt  LICENSE-NOTICE  THIRD-PARTY-NOTICES  Trash Advisor.iss  WhatToWipe.iss
scripts/: build-installer.bat  deploy-win-cpp-qt.ps1  install-githooks.ps1  install-githooks.sh
settings-grid-wails/: README.md  app.go  go.mod  main.go  wails.json
settings-grid-wails/frontend/: index.html  package-lock.json  package.json
settings-grid-wails/frontend/src/: main.jsx
win-cpp-qt/: CMakeLists.txt  README.md  build-qt-static.ps1  build.ps1  deploy-standalone.ps1  test-run.ps1  toolchain-qt-mingw.cmake  versioninfo.json
win-cpp-qt/build-static/: .ninja_deps  .ninja_log  .qt_mingw_compiler  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qrc_toolbar.cpp
win-cpp-qt/build-static/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
win-cpp-qt/build-static/EraseAndRewrite_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
win-cpp-qt/build-static/EraseAndRewrite_autogen/ISMKEKEPX5/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
win-cpp-qt/build-static/EraseAndRewrite_autogen/M2F3XSZVVA/: moc_ScanWorker.cpp  moc_ScanWorker.cpp.d
win-cpp-qt/build-static/EraseAndRewrite_autogen/PYCA34BWIR/: moc_TreemapWidget.cpp  moc_TreemapWidget.cpp.d
win-cpp-qt/build-static/EraseAndRewrite_autogen/YPKJ5OE7LN/: moc_AboutDialog.cpp  moc_AboutDialog.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d
win-cpp-qt/build-static/resources/: app.qrc.depends  toolbar.qrc.depends
win-cpp-qt/resources/: .gitignore  app.qrc  app.rc
win-cpp-qt/src/: main.cpp
win-cpp-qt/src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  Product.h  ScanDelivery.cpp  ScanDelivery.h  ScanSessionGate.h  Session.cpp  Session.h  UpdateChromePolicy.cpp  UpdateChromePolicy.h  UpdatePublish.cpp  UpdatePublish.h
win-cpp-qt/src/config/: ConfigStore.cpp  ConfigStore.h  TreemapConfig.cpp  TreemapConfig.h
win-cpp-qt/src/model/: FolderDescriptor.cpp  FolderDescriptor.h
win-cpp-qt/src/platform/: AppVersion.cpp  AppVersion.h  DirEntry.h  ShellOpen.cpp  ShellOpen.h  VolumeInfo.cpp  VolumeInfo.h  WinDirEnum.cpp  WinDirEnum.h  WinShell.h  WinWindowIcon.cpp  WinWindowIcon.h
win-cpp-qt/src/scan/: ArchiveClassifier.cpp  ArchiveClassifier.h  ScanResult.cpp  ScanResult.h  ScanTypes.cpp  ScanTypes.h  ScanWorker.cpp  ScanWorker.h  SubtreeMerge.cpp  SubtreeMerge.h
win-cpp-qt/src/treemap/: LabelFit.cpp  LabelFit.h  TreemapLayout.cpp  TreemapLayout.h  TreemapProjection.cpp  TreemapProjection.h  TreemapWidget.cpp  TreemapWidget.h
win-cpp-qt/src/ui/: AboutDialog.cpp  AboutDialog.h  AlertDialogs.cpp  AlertDialogs.h  AppIcon.cpp  AppIcon.h  MenuLabels.h  SettingsDialog.cpp  SettingsDialog.h  SettingsSchema.cpp  SettingsSchema.h  ToolbarIcons.cpp  ToolbarIcons.h
win-cpp-qt/src/util/: CheckedMath.h  Format.cpp  Format.h
win-cpp-qt/tests/: test_phase1.cpp  test_phase2.cpp
win-cpp-qt/tools/: .gitignore  build_app_ico.cpp  build_app_icon_qt.cpp  generate_icon_masters.cpp  restore-build-metadata.ps1
win-go/: .gitignore  README.md  build.ps1  eraserewrite.exe.manifest  go.mod  go.sum  main_windows.go  resource.syso  trashadvisor.exe.manifest  versioninfo.json  whatrwipe.exe.manifest
win-go/assets/art/: about.go
win-go/internal/art/: toolbar.go
win-go/internal/art/open-iconic/: LICENSE
win-go/internal/config/: file.go  scanning.go  treemap.go
win-go/internal/format/: size.go
win-go/internal/layout/: squarify.go
win-go/internal/model/: model.go
win-go/internal/scan/: packing.go  packing_test.go  scan_windows.go  treemap_build.go
win-go/internal/ui/: about_bunny_placeholder_windows.go  about_windows.go  config_mapper.go  custom_grid_windows.go  erroralert_windows.go  fontlist_windows.go  icon_load_windows.go  icons_embed_windows.go  row_schema.go  run_windows.go  settings_debug_windows.go  settings_state.go  settings_treemap_mirror_windows.go  settings_treemap_windows.go  units_windows.go  validation.go
win-go/internal/volume/: volume_windows.go
win-go/internal/winver/: version_windows.go
win-go/tools/genaboutpng/: main.go
win-go/tools/genicons/: main.go
win-go/tools/seedconfig/: main.go
win-go/tools/writeaboutpng/: main.go
